--- a/LoadData/templates/analysis_made.html
+++ b/LoadData/templates/analysis_made.html
@@ -1,1 +1,20 @@
-{{graph|safe}}
+<div class="tabs">
+  <div class="tab-button-outer">
+    <ul id="tab-button">
+      <li><a href="#tab01">Induction curve</a></li>
+      <li><a href="#tab02">Curve fit</a></li>
+    </ul>
+  </div>
+
+  <div class="tab-select-outer">
+    <select id="tab-select">
+      <option value="#tab01">Induction curve</option>
+      <option value="#tab02">Curve fit</option>
+    </select>
+  </div>
+  {% for elem in graph %}
+    <div id="tab0{{forloop.counter}}" class="tab-contents">
+      {{elem|safe}}
+    </div>
+  {% endfor %}
+</div>
