Search working with dropdown forms

--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -10,7 +10,7 @@
 
   <style media="screen">
   #tblData input{
-    width: 120%;
+    width: 110%;
   }
   #tblData input.overizado{
     border: 2px solid red;
@@ -224,6 +224,7 @@
       $("#val-inp").val('')
       $("#val-inp").attr('data-flag', '0');
       $("#val-inp").attr('type', 'hidden');
+      $("#btn-val").attr('class', 'd-none');
       _sw=false
     })
 
