--- a/LoadData/templates/search.html
+++ b/LoadData/templates/search.html
@@ -6,7 +6,6 @@
     <title>Search</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'to_plot.css' %}">
 
   </head>
   <body>
@@ -46,20 +45,29 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-
+    
     <script>
 
       $ = jQuery.noConflict();
 
       $(document).ready(function() {
 
+        $('#schForm').on("change", () => {
+          let data = []
+          data.push($("#schForm").serializeArray())
+          // CAMBIAR PARA QUE VAYA A REDIBUJAR EL FORMULARIO
+          // $.post('/monkey/plot', {param1: data, csrfmiddlewaretoken: $("#schForm input[name='csrfmiddlewaretoken']").val()}, function(data2, textStatus, xhr) {
+          //   $("#schForm").empty().append( data2)
+          // });
+          console.log("Cambio")
+        })
+
         $("#subPlot").on("click", () => {
           let data = []
           // data.push($("#schForm input").serializeArray())
           data.push($("#schForm").serializeArray())
           $.post('/monkey/plot', {param1: data, csrfmiddlewaretoken: $("#schForm input[name='csrfmiddlewaretoken']").val()}, function(data2, textStatus, xhr) {
-            $( "#plot" ).empty().append( data2)
+            $("#plot").empty().append( data2)
 
             // Function that gives effects to tab element
             var $tabButtonItem = $('#tab-button li'),
