--- a/LoadData/templates/index.html
+++ b/LoadData/templates/index.html
@@ -30,16 +30,14 @@
       <nav aria-label="...">
         Steps:
         <ul class="pagination" id="steps">
-          <li class="page-item disabled">
-            <a class="page-link bg-primary text-white" href="#" tabindex="-1">Strain</a>
-          </li>
+          <li class="page-item disabled"><a class="page-link bg-primary text-white" href="#" tabindex="-1">Strain</a></li>
           <li class="page-item disabled"><a class="page-link" href="#">Media</a></li>
           <li class="page-item disabled"><a class="page-link" href="#">DNA</a></li>
         </ul>
       </nav>
 
       <input type="text" id="val-inp">
-      <button id='btn-val'>Asignar valor</button>
+      <button id='btn-val'>Assign value</button>
 
       <main>
         <section class="sec demo">
